--- a/template.html
+++ b/template.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title></title>
+        <title>**Template**</title>
         <link rel="stylesheet" type="text/css" href="_css/main.css">
     </head>
     <body>
-        <div id="header">
+        <div id="page">
+            <div id="header">
             <h1>Zahavi McCray</h1>
             <div id="nav">
                 <a href="https://htmlcss-zdab3a5t.c9.io/index.html">Home</a>
@@ -14,7 +15,7 @@
             </div>
         </div>
         <div id="content">
-            <h2>DIVs</h2>
+            <h2>Subheading</h2>
             <p>The DIV tag on its own doesn't do much</p>
         <div id="sure">
             <h3>DIV tag definition</h3>
@@ -24,18 +25,18 @@
                     <li>HTML is not funny</li>
                 </ul>
             </div>
-            <h2>DIV tag usage</h2>
+            <h2>Subheading</h2>
             <p>Assigning an id a tag allows us to style that tag (and all its nested tag) directly through CSS.</p>
             <p>To give that id styling it must be named as a selector, along with its declaration block and preceded by a pound sign (a hashtag symbol).</p>
-            <h2>ID Usage</h2>
+            <h2>Subheading</h2>
             <p>The id allows us to identify tags so that they may specifically be addressed within the CSS file.</p>
         </div>
         <div id="footer">
             <h3>List Title</h3>
                 <ul>
-                    <li>List Item 1</li>
-                    <li>List Item 2</li>
-                    <li>List Item 3</li>
+                    <li><a href="http://www.google.com/">Google</a></li>
+                    <li><a href="http://www.w3schools.org/">W3 Schools</a></li>
+                    <li><a href="https://www.codecademy.com/">Code Academy</a></li>
                 </ul>
         </div>
     </body>
