--- a/template.html
+++ b/template.html
@@ -7,7 +7,7 @@
     <body>
         <div id="page">
             <div id="header">
-            <h1>Zahavi McCray</h1>
+            <h1>Zahavi McCray - my site</h1>
             <div id="nav">
                 <a href="https://htmlcss-zdab3a5t.c9.io/index.html">Home</a>
                 <a href="https://htmlcss-zdab3a5t.c9.io/index.html">Contact Us</a>
