--- a/contact.html
+++ b/contact.html
@@ -15,8 +15,10 @@
             </div>
         </div>
         <div id="content">
-            <h2>Its Not Just Going To School. Its Learning Life.</h2>
-            <p>The Patiño School of Entrepreneurship is a new model for secondary education. It’s an applied entrepreneurship school that fosters real world skills — critical thinking, problem solving, and collaboration and as seniors, students launch their own companies.</p>
+            <h2>Our Information</h2>
+            <strong>Principal Dr. Brett Taylor</strong>
+            <a href="mailto:brett.taylor@fresnounified.org" target="_blank">brett.taylor@fresnounified.org</a>
+            <strong>Vice Principal Blair Eliason</strong>
         </div>
         
         <div id="footer">
